--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <form id="create-task-form" action="" method="POST">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <select>
+        <option value = "highPriority">High Priority</option>
+        <option value = "mediumPriority">Medium Priority</option>
+        <option selected value = "lowPriority">Low Priority</option>
+      </select>
       <input type="submit" value="Create New Task">
     </form>
 
